Fixing of some elements of the display (icons not showing properly, size of the cells being different)
NOTICE: the subcomplex expanding doesn't work on the research results where the subcomplexes are not also listed as a complex

--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-header/table-header.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-header/table-header.component.css
@@ -36,8 +36,8 @@ th {
   padding-left: 29px;
   padding-right: 29px;
 
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 160px;
+  max-width: 160px;
   height: 100px;
   overflow: hidden;
 
@@ -47,3 +47,4 @@ th {
 #CN-table {
   width: 100%;
 }
+
