--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-interactor-column/table-interactor-column.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-interactor-column/table-interactor-column.component.css
@@ -3,26 +3,24 @@ td:first-child {
   position: sticky;
   left: 0;
   z-index: 3;
-
   border: 1px solid black;
   background-color: #b7b8b8;
-
-
   height: 100px;
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 160px;
+  max-width: 160px;
 }
 
 /* cells */
 td {
   text-align: center;
   border: 1px solid black;
-
   height: 100px;
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 160px;
+  max-width: 160px;
 }
 
 #interactors-table {
   width: 100%;
 }
+
+
